--- a/_posts/2015-08-11-Make.markdown
+++ b/_posts/2015-08-11-Make.markdown
@@ -4,5 +4,6 @@ text: Learn to use Make to manage your the data analysis pipeline!
 location:  Simon Fraser University (Burnaby Campus) SSB 7172
 link: https://github.com/ttimbers/studyGroup/issues/6
 date: 2015-08-11
+time: 3:30 pm
 
 ---
