--- a/_posts/2015-09-15-RStudio.markdown
+++ b/_posts/2015-09-15-RStudio.markdown
@@ -4,5 +4,6 @@ text: Let's dig in to that menu bar! Debugger & R markdown, here we come
 location: Simon Fraser University, Burnaby Campus, SSB 7172
 link: https://github.com/ttimbers/studyGroup/issues/17
 date: 2015-09-15
+time: 3:30 pm
 
 ---
