--- a/_posts/2015-08-25-Coworking_2.markdown
+++ b/_posts/2015-08-25-Coworking_2.markdown
@@ -4,6 +4,7 @@ text: Come work on your own project in a supportive environment to get (and give
 location: Simon Fraser University, Burnaby Campus, SSB 7172
 link: https://github.com/ttimbers/studyGroup/issues/28
 date: 2015-08-25
-time: 3:30 pm
+startTime: 15:30
+endTime: 16:30
 
 ---
