--- a/_posts/2015-09-15-RStudio.markdown
+++ b/_posts/2015-09-15-RStudio.markdown
@@ -4,6 +4,7 @@ text: Let's dig in to that menu bar! Debugger & R markdown, here we come
 location: Simon Fraser University, Burnaby Campus, SSB 7172
 link: https://github.com/ttimbers/studyGroup/issues/17
 date: 2015-09-14
-time: 11:30
+startTime: 11:30
+endTime: 12:30
 
 ---
