fixed time format

--- a/_posts/2015-11-30-LMFIT.markdown
+++ b/_posts/2015-11-30-LMFIT.markdown
@@ -1,9 +1,10 @@
 ---
-title: Study Group Meetup
-text:  LMFIT: A Python tool for model fitting
-location: Simon Fraser University, Burnaby Campus, Libraries Research Commons
+title: LmFit
+text:  LMFIT, A Python tool for model fitting
+location: Simon Fraser University, Burnaby Campus, Research Commons Room 7010, Bennett Library
 link: https://github.com/ttimbers/studyGroup/issues/50
 date: 2015-11-30
-time: 11:30 am -12:30 pm
+startTime: 11:30
+endTime: 12:30
 
 ---
