--- a/_posts/2016-02-29-bokeh.markdown
+++ b/_posts/2016-02-29-bokeh.markdown
@@ -4,5 +4,6 @@ text: introduction to Bokeh visualization library by Alex Razoumov
 location: Research Commons Room 7010, Bennett Library
 link: https://github.com/ttimbers/studyGroup/issues/55
 date: 2016-02-29
-time: 11:30 am
+startTime: 11:30
+endTime: 12:30
 ---
