Changed dates and edited titles

--- a/_posts/2016-01-18-Coworking_9.markdown
+++ b/_posts/2016-01-18-Coworking_9.markdown
@@ -1,7 +1,7 @@
 ---
 title: Coworking Session
 text: Come work on your own project in a supportive environment to get (and give) help from your peers!
-location: Simon Fraser University, Burnaby Campus, SSB 7172
+location: Simon Fraser University, Burnaby Campus, Library Research Commons
 link: https://github.com/ttimbers/studyGroup/issues/58
 date: 2016-01-18
 startTime: 11:30
