--- a/_posts/2017-02-14-QA-git.markdown
+++ b/_posts/2017-02-14-QA-git.markdown
@@ -1,5 +1,5 @@
 ---
-title: 'Introduction to SQL'
+title: 'Q&A Session on Git'
 text: "To be updated."
 location: Simon Fraser University, Burnaby Campus, Library Research Commons
 link: 
