--- a/_posts/2017-10-24-emacs.markdown
+++ b/_posts/2017-10-24-emacs.markdown
@@ -1,6 +1,6 @@
 ---
 title: '"Emacs" by Marie-Hélène Burle'
-text: ""
+text: "For more information about this workshop, including pre-requisites, please see https://github.com/prosoitos/workshop_getting-started-with-emacs."
 location: Simon Fraser University, Burnaby Campus, Library Research Commons
 link: https://github.com/sciprog-sfu/sciprog-sfu.github.io/issues/174
 date: 2017-10-24
